# game_of_life

./: CMakeLists.txt  README.md
src/: app.cpp  app.h  draw_board_pane.cpp  draw_board_pane.h  gamefield.cpp  gamefield.h  main.cpp
src/config/: config.cpp  config.h
src/gamefield/: gamefield.cpp  gamefield.h
src/view/: main_frame.cpp  main_frame.h
src/view/draw/: draw_board_pane.cpp  draw_board_pane.h
